# dynamics-cli

./: .gitattributes  .gitignore  Cargo.toml  FQL.md  README.md  USAGE.md  bump.sh  catppuccin.md  claude.update.md  cleanup_checklist.md  deadlines_checklist.md  dist-workspace.toml  dynamics-api.sh  flake.nix  todo.md  v2.md
dynamics-cli/: Cargo.toml
dynamics-cli/src/: cs_parser.rs  csv_parser.rs  lib.rs  main.rs
dynamics-cli/src/api/: client.rs  manager.rs  metadata.rs  mod.rs  pluralization.rs
dynamics-cli/src/api/metadata/: mod.rs  models.rs
dynamics-cli/src/api/operations/: mod.rs  operation.rs
dynamics-cli/src/api/operations/batch/: builder.rs  mod.rs
dynamics-cli/src/api/query/: builder.rs  filters.rs  orderby.rs  query.rs  result.rs
dynamics-cli/src/api/resilience/: config.rs  mod.rs
dynamics-cli/src/cli/: app.rs  mod.rs
dynamics-cli/src/cli/commands/: migration.rs  mod.rs  tui.rs  update.rs
dynamics-cli/src/cli/commands/auth/: environments.rs  status.rs
dynamics-cli/src/cli/commands/query/: handler.rs  mod.rs
dynamics-cli/src/cli/commands/raw/: handler.rs  mod.rs
dynamics-cli/src/cli/ui/: mod.rs
dynamics-cli/src/commands/: deadlines.rs  mod.rs
dynamics-cli/src/commands/deadlines/: csv_cache_tui.rs  csv_loading_modal.rs  field_mapping_tui.rs  file_browser.rs  hardcoded_field_mapping.rs  sheet_selector.rs  validation.rs
dynamics-cli/src/commands/migration/: export.rs  services.rs
dynamics-cli/src/commands/migration/ui/: event_handler.rs  mouse.rs
dynamics-cli/src/commands/migration/ui/components/: confirmation_dialog.rs  list_component.rs  mod.rs  modal_component.rs  prefix_mapping_modal.rs
dynamics-cli/src/commands/migration/ui/screens/: base_screen.rs  comparison_select_screen.rs  environment_select_screen.rs  unified_compare_screen.rs
dynamics-cli/src/commands/query/: mod.rs  run.rs
dynamics-cli/src/commands/settings/: list_mappings.rs  reset.rs  set.rs  show.rs
dynamics-cli/src/config/: compat.rs  migration.rs  mod.rs
dynamics-cli/src/config/migrations/: manager.rs  mod.rs
dynamics-cli/src/config/migrations/files/001_initial/: up.sql
dynamics-cli/src/config/models/: mod.rs
dynamics-cli/src/config/options/: builder.rs  mod.rs  registry.rs  store.rs  types.rs
dynamics-cli/src/config/options/registrations/: api.rs  keybinds.rs  keys.rs  mod.rs  themes.rs  tui.rs  update.rs
dynamics-cli/src/config/repository/: credentials.rs  entity_data_cache.rs  entity_metadata_cache.rs  examples.rs  mappings.rs  migrations.rs  mod.rs  queue.rs  tokens.rs  update_metadata.rs
dynamics-cli/src/dynamics/: client.rs
dynamics-cli/src/fql/: lexer.rs  mod.rs  parser.rs
dynamics-cli/src/tui/: app.rs  color.rs  command.rs  improvements.md  layout.md  lifecycle.rs  macros.rs  mod.rs  multi_runtime.rs  proposal.md  proposal2.md  reducal.md  resource.rs  runtime.rs  subscription.rs  test_resource_handlers.rs  test_validate.rs  todo.md
dynamics-cli/src/tui/apps/: app_launcher.rs  environment_selector_app.rs  mod.rs  settings_app.rs  update_app.rs
dynamics-cli/src/tui/apps/copy_questionnaires/: copy_questionnaire_app.rs  mod.rs  select_questionnaire_app.rs
dynamics-cli/src/tui/apps/deadlines/: deadlines_environment_select_app.rs  deadlines_file_select_app.rs  deadlines_inspection_app.rs  deadlines_mapping_app.rs  field_mappings.rs  mod.rs  models.rs  operation_builder.rs  todo.md
dynamics-cli/src/tui/apps/examples/: example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example_resource_macro.rs  mod.rs
dynamics-cli/src/tui/apps/migration/: entity_comparison_app.rs  migration_comparison_select_app.rs  migration_environment_app.rs  mod.rs  todo.md
dynamics-cli/src/tui/apps/queue/: app.rs  commands.rs  mod.rs  models.rs  tree_nodes.rs  utils.rs  views.rs
dynamics-cli/src/tui/apps/screens/: error_screen.rs  loading_screen.rs  mod.rs
dynamics-cli/src/tui/element/: mod.rs
dynamics-cli/src/tui/element/builders/: autocomplete.rs  color_picker.rs  file_browser.rs  list.rs  mod.rs  progress_bar.rs  row.rs  scrollable.rs  select.rs  table_tree.rs  text_input.rs  tree.rs
dynamics-cli/src/tui/modals/: app_overview.rs  confirmation.rs  error.rs  examples.rs  help.rs  loading.rs  manual_mappings.rs  mod.rs  prefix_mappings.rs  warning.rs
dynamics-cli/src/tui/renderer/: dropdown_registry.rs  focus_registry.rs  interaction_registry.rs  mod.rs
dynamics-cli/src/tui/renderer/widgets/: autocomplete.rs  button.rs  color_picker.rs  layout.rs  list.rs  mod.rs  panel.rs  primitives.rs  progress_bar.rs  scrollable.rs  select.rs  stack.rs  table_tree.rs  text_input.rs  tree.rs
dynamics-cli/src/tui/state/: config.rs  focus.rs  mod.rs  modal.rs  theme.rs
dynamics-cli/src/tui/widgets/: autocomplete.rs  color_picker.rs  events.rs  fields.rs  file_browser.rs  list.rs  mod.rs  scrollable.rs  select.rs  text_input.rs  tree.rs
dynamics-cli/src/ui/: prompts.rs
dynamics-cli/src/update/: mod.rs
dynamics-cli/wix/: main.wxs
dynamics-lib-macros/: Cargo.toml
dynamics-lib-macros/src/: app_state.rs  lib.rs  resource_handlers.rs  utils.rs  validate.rs
(+357 files in other folders)
