[package]
name = "dynamics-cli"
version = "0.1.0"
edition = "2024"
authors = ["Konsta Kuosmanen <konsta@kuosmanen.dev>"]
description = "A command-line interface for Microsoft Dynamics 365"
repository = "https://github.com/norpie/dynamics-cli"
license = "MIT OR Apache-2.0"
keywords = ["dynamics", "cli", "microsoft", "crm", "dynamics365"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "dynamics_cli"
path = "src/lib.rs"

[[bin]]
name = "dynamics-cli"
path = "src/main.rs"

[features]
default = []
migration = []
deadlines = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
dirs = "5.0"
dialoguer = "0.11"
colored = "2.1"
rpassword = "7.0"
is-terminal = "0.4"
urlencoding = "2.1"
roxmltree = "0.19"
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
rust_xlsxwriter = "0.78"
uuid = { version = "1.0", features = ["v4", "serde"] }
calamine = "0.26"
regex = "1.0"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid", "migrate"] }
async-trait = "0.1"
quick-xml = { version = "0.36", features = ["serialize"] }
once_cell = "1.19"
futures = "0.3.31"
include_dir = "0.7"
