[workspace]
resolver = "2"
members = [
    "dynamics-cli",
    "dynamics-lib-macros",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Konsta Kuosmanen <konsta@kuosmanen.dev>"]
repository = "https://github.com/norpie/dynamics"
license = "MIT OR Apache-2.0"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
