[workspace]
resolver = "2"
members = [
    "dynamics-cli",
    "dynamics-lib-macros",
]

[workspace.package]
version = "0.5.4"
edition = "2024"
authors = ["Konsta Kuosmanen <konsta@kuosmanen.dev>"]
repository = "https://github.com/norpie/dynamics"
license = "MIT OR Apache-2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
