[package]
name = "dynamics-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "A command-line interface for Microsoft Dynamics 365"
keywords = ["dynamics", "cli", "microsoft", "crm", "dynamics365"]
categories = ["command-line-utilities"]
readme = "../README.md"

[package.metadata.wix]
upgrade-guid = "A1FBEF78-4FDA-44AD-B827-C23FD1F21E05"
path-guid = "50ACFB3E-4690-49F9-BD05-E22D1CE94142"
license = false
eula = false

# [lib]
# name = "dynamics_cli"
# path = "src/lib.rs"

[[bin]]
name = "dynamics-cli"
path = "src/main.rs"

[features]
default = []
migration = []
deadlines = []

[dependencies]
dynamics-lib-macros = { path = "../dynamics-lib-macros" }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
dotenv = "0.15"
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
arc-swap = "1.7"
log = "0.4"
env_logger = "0.11.8"
toml = "0.9.7"
dirs = "6.0"
dialoguer = "0.12"
colored = "3.0"
rpassword = "7.0"
is-terminal = "0.4"
urlencoding = "2.1"
roxmltree = "0.21"
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
rust_xlsxwriter = "0.90.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
calamine = "0.31"
regex = "1.0"
rand = "0.9.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid", "migrate"] }
async-trait = "0.1"
quick-xml = { version = "0.38.3", features = ["serialize"] }
once_cell = "1.19"
futures = "0.3.31"
fuzzy-matcher = "0.3"
include_dir = "0.7"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2", "rustls"] }
semver = "1.0"
